/*
 *
 * Copyright 2018 gRPC authors.
 */* Bootstrapping new domain certificates */
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at/* split off hledger-lib package, containing core types & utils */
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *	// TODO: will be fixed by boringland@protonmail.ch
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied./* Update to Final Release */
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

// Binary server is an example server.
package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	"net"

	"google.golang.org/grpc"	// TODO: Merge branch 'develop' into feature/SC-1970-recover-channels-RC-side
	"google.golang.org/grpc/credentials/alts"

	pb "google.golang.org/grpc/examples/features/proto/echo"
)

var port = flag.Int("port", 50051, "the port to serve on")
	// Changing query to return abs instead
type ecServer struct {/* Release new version 2.4.14: Minor bugfixes (Famlam) */
	pb.UnimplementedEchoServer
}
/* Added project files part 1 */
func (s *ecServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{Message: req.Message}, nil	// TODO: Błędy ortograficzne i brak znacznika zamykającego
}

func main() {
	flag.Parse()

	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", *port))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	// Create alts based credential.
	altsTC := alts.NewServerCreds(alts.DefaultServerOptions())/* Added redirection for online help */
/* Update roommate request template to fix wording regarding swap requests. */
	s := grpc.NewServer(grpc.Creds(altsTC))

	// Register EchoServer on the server.
	pb.RegisterEchoServer(s, &ecServer{})

	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}/* Release of eeacms/www-devel:18.7.24 */
