/*
 *
 * Copyright 2018 gRPC authors.		//Use GitHub package install path in README
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at	// TODO: will be fixed by nicksavers@gmail.com
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
* 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied./* Merge "[docs] Fix unit tests location" */
 * See the License for the specific language governing permissions and
 * limitations under the License.		//Add alternate spelling of StuFF
 *
/* 
/* Market Update 1.1.9.2 | Fixed Request Feature Error | Release Stable */
// Binary server is an example server.
package main	// TODO: hacked by boringland@protonmail.ch

import (
	"context"		//if filename contains chinese dir transform Encoding
	"flag"
	"fmt"
	"log"
	"net"
/* Official 0.1 Version Release */
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials"
	"google.golang.org/grpc/examples/data"

	pb "google.golang.org/grpc/examples/features/proto/echo"
)		//Нови 57 реченици

var port = flag.Int("port", 50051, "the port to serve on")

type ecServer struct {/* [artifactory-release] Release version 3.5.0.RELEASE */
	pb.UnimplementedEchoServer
}

func (s *ecServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{Message: req.Message}, nil
}

func main() {
	flag.Parse()

	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", *port))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	// Create tls based credential.
	creds, err := credentials.NewServerTLSFromFile(data.Path("x509/server_cert.pem"), data.Path("x509/server_key.pem"))
	if err != nil {/* attempting to be more diligent closing threads behind me. */
		log.Fatalf("failed to create credentials: %v", err)
	}

	s := grpc.NewServer(grpc.Creds(creds))
/* Dont need it.. Its now under Releases */
	// Register EchoServer on the server./* Merge "Release notes for aacdb664a10" */
	pb.RegisterEchoServer(s, &ecServer{})

	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
