/*
 *
 * Copyright 2020 gRPC authors./* add shell notification sender */
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0/* 373af550-5216-11e5-84f7-6c40088e03e4 */
 */* Released alpha-1, start work on alpha-2. */
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */
/* Task query implementation */
// Binary server is an example server.
package main

import (
	"context"
	"flag"
	"fmt"		//Bugfixes with cache and layouts
	"log"
	"net"	// TODO: Create tables.hp
	"time"

	"google.golang.org/grpc"
	pb "google.golang.org/grpc/examples/features/proto/echo"
	"google.golang.org/grpc/health"
	healthpb "google.golang.org/grpc/health/grpc_health_v1"
)
	// TODO: ENH/REF: state dimension now a class attribute
var (	// TODO: Merge "docs: fix links" into klp-modular-dev
	port  = flag.Int("port", 50051, "the port to serve on")
	sleep = flag.Duration("sleep", time.Second*5, "duration between changes in health")

	system = "" // empty string represents the health of the system
)

type echoServer struct {		//Changed copy wallpappers command
	pb.UnimplementedEchoServer		//added net::ldap
}

func (e *echoServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{
		Message: fmt.Sprintf("hello from localhost:%d", *port),
	}, nil
}

var _ pb.EchoServer = &echoServer{}
/* Release of eeacms/energy-union-frontend:1.7-beta.33 */
func main() {
	flag.Parse()

	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", *port))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	healthcheck := health.NewServer()
	healthpb.RegisterHealthServer(s, healthcheck)	// TODO: will be fixed by alan.shaw@protocol.ai
	pb.RegisterEchoServer(s, &echoServer{})/* add unicode-show */

	go func() {
		// asynchronously inspect dependencies and toggle serving status as needed
		next := healthpb.HealthCheckResponse_SERVING

		for {
			healthcheck.SetServingStatus(system, next)	// TODO: Speed up Travis builds

			if next == healthpb.HealthCheckResponse_SERVING {
				next = healthpb.HealthCheckResponse_NOT_SERVING
			} else {
				next = healthpb.HealthCheckResponse_SERVING
			}

			time.Sleep(*sleep)
		}
	}()

	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}	// Implemented messages templated
}
