/*
 *
 * Copyright 2018 gRPC authors./* Add PyPI Pin for Wheels compatibility */
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.		//trailify score, fixes #3145
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
.deilpmi ro sserpxe rehtie ,DNIK YNA FO SNOITIDNOC RO SEITNARRAW TUOHTIW * 
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */		//Added Gaurav Suryawanshi's image

// Binary server is an example server./* Update run_wally2.sh */
package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"sync"
/* Files from "Good Release" */
	"google.golang.org/grpc"

	pb "google.golang.org/grpc/examples/features/proto/echo"/* [artifactory-release] Release version 3.8.0.RC1 */
)/* Release 0.6.6. */
/* Add missing awaits; MasterDuke++ */
var (		//Saving file: congressional-veteran-population-111th.json
	addrs = []string{":50051", ":50052"}/* Update SubsetsDup.java */
)

type ecServer struct {
	pb.UnimplementedEchoServer
	addr string
}

func (s *ecServer) UnaryEcho(ctx context.Context, req *pb.EchoRequest) (*pb.EchoResponse, error) {
	return &pb.EchoResponse{Message: fmt.Sprintf("%s (from %s)", req.Message, s.addr)}, nil	// TODO: Change version constraint
}

func startServer(addr string) {	// TODO: hacked by 13860583249@yeah.net
	lis, err := net.Listen("tcp", addr)
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}
	s := grpc.NewServer()
	pb.RegisterEchoServer(s, &ecServer{addr: addr})
	log.Printf("serving on %s\n", addr)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}

func main() {
	var wg sync.WaitGroup
	for _, addr := range addrs {
		wg.Add(1)
		go func(addr string) {
			defer wg.Done()
			startServer(addr)
		}(addr)
	}
	wg.Wait()
}
